Adding in creation of scratch directory if it does not exist.